# ternary-coordination

./: AGENT.md  Cargo.toml  README.md
examples/: tutorial.rs
memory/: JOURNAL.md
src/: algebra.rs  balance.rs  consensus.rs  lib.rs  matrix.rs  spectrum.rs  ternary.rs
