[package]
name = "ternary-coordination"
version = "0.1.0"
edition = "2024"
description = "Formal {-1, 0, +1} coordination algebra with ternary matrices, consensus, and provable convergence"
license = "MIT"
repository = "https://github.com/SuperInstance/ternary-coordination"
keywords = ["ternary", "consensus", "algebra", "matrix", "balanced"]
categories = ["mathematics", "algorithms"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
